# eidas-inspect

./: .dockerignore  .gitignore  BUILD_GUIDE.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  PRD.md  PROGRESS.md  README.md
api/: config.py  errors.py  logging_config.py  main.py  middleware.py  rate_limit.py  requirements-dev.txt  requirements.txt  schemas.py  startup.py
api/routers/: health.py  report.py  verify.py
api/services/: counters.py  report_pdf.py  verification.py
api/static/: index.html
api/tests/: conftest.py  test_health.py  test_rate_limit.py  test_report.py  test_startup.py  test_verify.py
core/: pyproject.toml
core/eidas_inspect_core/: __init__.py  errors.py  ksi_tool.py  models.py  qc_statements.py  revocation.py  verify.py
core/eidas_inspect_core/trust_list/: __init__.py  cache.py  registry.py
core/tests/: conftest.py  pdf_fixtures.py  test_ksi.py  test_ksi_tool.py  test_ksi_tool_integration.py  test_point_in_time.py  test_revocation.py  test_trust_list.py  test_verdict.py  test_verify_pdf.py  trust_list_fixtures.py
core/tests/fixtures/ksi/: README.md  demo-signature.ksig
web/: README.md  index.html
web/src/: App.jsx  api.js  app.css  glossary.js  icons.jsx  itemPresentation.js  main.jsx  theme.css
web/src/components/: CertificateSection.jsx  DownloadReportButton.jsx  ErrorNotice.jsx  Footer.jsx  Header.jsx  Landing.jsx  PasswordPrompt.jsx  ResultView.jsx  SignatureCard.jsx  Term.jsx  UnsignedState.jsx  UploadZone.jsx  VerdictBanner.jsx  VerifyingAnimation.jsx
